添加一个微信公众平台的开发说明

--- a/WeixinWeb/request.html
+++ b/WeixinWeb/request.html
@@ -23,5 +23,9 @@
         <textarea id="menu" style="width:600px;height:600px"></textarea>
         <input id="customMenu" type="button" value="构建自定义菜单" />
     </div>
+
+    <div id="loadPage">
+
+    </div>
 </body>
 </html>
