--- a/Game/HZGift/promoteIndex .html
+++ b/Game/HZGift/promoteIndex .html
@@ -7,7 +7,7 @@
     <script src="core/jquery.js"></script>
     <script src="core/snow.js"></script>
     <script src="core/WeixinJSBridge.js"></script>
-    <script src="inc/js/index.js"></script>
+    <script src="inc/js/promoteIndex.js"></script>
     <link href="themes/default/css/playground.css" rel="stylesheet"/>
     <link href="themes/default/css/index.css" rel="stylesheet"/>
 </head>
