--- a/WeixinWeb/request.html
+++ b/WeixinWeb/request.html
@@ -3,29 +3,39 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script src="core/jquery.js"></script>
+    <script type="text/javascript" src="inc/js/core/jsoneditor/jsoneditor.js"></script>
+    <link rel="stylesheet" type="text/css" href="inc/js/core/jsoneditor/jsoneditor.css">
+    <script src="inc/js/core/jquery.js"></script>
     <script src="request.js"></script>
     <style>
-        body>div
-        {
-            margin-bottom:5px;
-            border:1px solid black;
+
+        body {
+            font: 10.5pt arial;
+            color: #4d4d4d;
+            line-height: 150%;
+            width: 500px;
+        }
+
+        code {
+            background-color: #f5f5f5;
+        }
+
+        #jsoneditor {
+            width: 500px;
+            height: 500px;
         }
     </style>
 </head>
 <body>
     <div>
-        <h2>token</h2>
-        <input id="getToken" type="button" value="获取token" /><label id="token"></label>
-    </div>
-    <div>
-        <h2>自定义菜单</h2>
-        <textarea id="menu" style="width:600px;height:600px"></textarea>
-        <input id="customMenu" type="button" value="构建自定义菜单" />
-    </div>
+        <h2>发送http/https请求</h2>
+        <div class="outer">
+            <input id="url" type="url" placeholder="请求地址" value="" class="text" style="width:498px;" />
+        </div>
+        <div id="jsoneditor"></div>
+        <input id="sendRequest" type="button" value="发送请求" />
 
-    <div id="loadPage">
-
+        <div id="result" style="width:500px;height:500px;"></div>
     </div>
 </body>
 </html>
