--- a/Ordering/Order.html
+++ b/Ordering/Order.html
@@ -52,14 +52,9 @@
             var tag = $("head").append(script);
             //$.os.desktop=true;
         }
-
-        //  $.feat.nativeTouchScroll=true;
-        $(document).ready(function () {
-          
-            $.ui.launch();
-        });
+        $.ui.setBackButtonText('返回');
     </script>
-
+    <script src="order.js"></script>
 </head>
 
 <body>
@@ -68,10 +63,18 @@
         </div>
         <div id="content">
             <div id="page_main" class="panel" data-load="loadedPanel" data-header="page_main_header" data-footer="main_footer">
-                <h2>SDG</h2>
+                <a id="addOrder" class="button icon add block">点餐</a>
+                <ul id="foodList" class="list">
+                    <li style="text-align:center">
+                    <h4>无点餐</h4>
+                    </li>
+                </ul>
             </div>
             <div id="page_list" class="panel" data-load="loadedPanel" data-header="page_list_header" data-footer="main_footer">
                 <h2>SDG</h2>
+            </div>
+            <div id="page_detail" data-load="order.load.page_detail_load" class="panel" data-load="loadedPanel" data-header="page_detail_header" data-footer="main_footer">
+                <h2>Detail</h2>
             </div>
         </div>
 
@@ -79,14 +82,19 @@
     </div>
 
     <header id="page_main_header">
-        <h1>点餐列表</h1>
-        <a id="addOrder" class="button icon add" style="float:right">Button</a>
+        <h1>我的餐表</h1>
+        <a class="button icon refresh" style="float:right">刷新</a>
     </header>
 
     <header id="page_list_header">
-        <a class='backButton button'>Back</a>
+        <h1>信息统计</h1>
+        <a id="refreshList" class="button icon refresh" style="float:right">刷新</a>
+    </header>
+
+    <header id="page_detail_header">
+        <a class='backButton button'>返回</a>
         <h1>点餐列表</h1>
-        <a id="refreshList" class="button icon refresh" style="float:right">Button</a>
+        <a id="confirm" class="button icon check" style="float:right">确认</a>
     </header>
 
     <footer id='main_footer'>
