--- a/Ordering/Order.html
+++ b/Ordering/Order.html
@@ -79,12 +79,15 @@
                 </ul>
             </div>
             <div id="page_detail" data-load="order.load.page_detail_load" class="panel" data-header="page_detail_header" data-footer="main_footer">
-                <div class="input-group">
-                    <label>餐名</label><input id="food" type="text" placeholder="店名+餐名">
-                    <label>数量</label><input id="count" type="number" placeholder="输入份数">
-                    <label>价格</label><input id="price" type="number" placeholder="输入总金额">
-                    <a id="menu" class="button icon menu block">菜单</a>
-                </div>
+                <label>餐名</label><input id="search" type="search" placeholder="搜索">
+                <ul class="menulist list">
+                    <li>
+                        <a>
+                            <h2>牛肉</h2>
+                            <p>32元</p>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
 
